Fixed question layout: collapsed, error/header bottom

--- a/packages/survey-core/src/default-theme/blocks/sd-collapsed-element.scss
+++ b/packages/survey-core/src/default-theme/blocks/sd-collapsed-element.scss
@@ -1,42 +1,59 @@
 @use "../variables.scss" as *;
 
-.sd-element--expanded,
-.sd-element--collapsed {
+// .sd-element--expanded > div > div,
+// .sd-element--collapsed > div > div {
+//   &>.sd-element__header {
+//     cursor: pointer;
+//   }
+// }
+
+// .sd-element--collapsed {
+//   &>.sd-element__header {
+//     // padding: var(--sjs2-spacing-x000) var(--sd-base-padding);
+//     box-sizing: border-box;
+//     background-color: $background;
+//     // margin-inline-start: calc(-1 * var(--sd-base-padding));
+//     // width: calc(100% + 2 * var(--sd-base-padding));
+//   }
+
+//   &.sd-element--with-frame {
+//     // padding-top: 0;
+//     // padding-bottom: 0;
+
+//     &>.sd-element__header {
+//       padding-top: var(--sjs2-spacing-x200);
+//       padding-bottom: var(--sjs2-spacing-x200);
+//       border-radius: var(--sjs2-radius-component-panel);
+//     }
+//   }
+
+//   &>.sd-element__header:focus-within,
+//   &>.sd-element__header:hover {
+//     background-color: $background-dim-light;
+//   }
+
+//   &.sd-element--nested {
+
+//     &>.sd-element__header:hover,
+//     &>.sd-element__header:focus-within {
+//       box-shadow: 0 var(--sjs2-spacing-negative-x200) 0 0 $background-dim-light, 0 var(--sjs2-spacing-x200) 0 $background-dim-light;
+//     }
+//   }
+// }
+
+.sd-element--expandable > div > div {
   &>.sd-element__header {
     cursor: pointer;
   }
 }
 
-.sd-element--collapsed {
-  &>.sd-element__header {
-    // padding: var(--sjs2-spacing-x000) var(--sd-base-padding);
-    box-sizing: border-box;
-    background-color: $background;
-    // margin-inline-start: calc(-1 * var(--sd-base-padding));
-    // width: calc(100% + 2 * var(--sd-base-padding));
-  }
-
-  &.sd-element--with-frame {
-    // padding-top: 0;
-    // padding-bottom: 0;
-
-    &>.sd-element__header {
-      padding-top: var(--sjs2-spacing-x200);
-      padding-bottom: var(--sjs2-spacing-x200);
-      border-radius: var(--sjs2-radius-component-panel);
-    }
-  }
-
-  &>.sd-element__header:focus-within,
-  &>.sd-element__header:hover {
-    background-color: $background-dim-light;
-  }
-
-  &.sd-element--nested {
-
-    &>.sd-element__header:hover,
-    &>.sd-element__header:focus-within {
-      box-shadow: 0 var(--sjs2-spacing-negative-x200) 0 0 $background-dim-light, 0 var(--sjs2-spacing-x200) 0 $background-dim-light;
+.sd-element--with-frame.sd-element--collapsed > div {
+  &> .sd-question__header-and-content-container {
+    padding-top: var(--sjs2-spacing-x200);
+    padding-bottom: var(--sjs2-spacing-x200);
+    border-radius: var(--sjs2-radius-component-panel);
+    &:hover, &:focus-within {
+      background-color: $background-dim-light;
     }
   }
 }
